--- a/src/locales/uk/messages.json
+++ b/src/locales/uk/messages.json
@@ -3,7 +3,7 @@
   "English": "Англійська",
   "Log Out": "Вихід",
   "Profile": "Профіль",
-  "Rates": "Рейтнги",
+  "Rates": "Рейтинги",
   "Russian": "Російська",
   "Search": "Пошук",
   "Ukrainian": "Українська"
