--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -6,5 +6,7 @@
   "Rates": "Rates",
   "Russian": "Russian",
   "Search": "Search",
-  "Ukrainian": "Ukrainian"
+  "Ukrainian": "Ukrainian",
+  "Sign In": "Sign In",
+  "Sign Up": "Sign Up"
 }
