--- a/src/locales/ru/messages.json
+++ b/src/locales/ru/messages.json
@@ -6,5 +6,7 @@
   "Rates": " Рейтинги",
   "Russian": "Русский",
   "Search": "Поиск",
-  "Ukrainian": "Украинский"
+  "Ukrainian": "Украинский",
+  "Sign In": "Вход",
+  "Sign Up": "Регистрация"
 }
