--- a/src/locales/uk/messages.json
+++ b/src/locales/uk/messages.json
@@ -6,5 +6,7 @@
   "Rates": "Рейтинги",
   "Russian": "Російська",
   "Search": "Пошук",
-  "Ukrainian": "Українська"
+  "Ukrainian": "Українська",
+  "Sign In": "Вхід",
+  "Sign Up": "Реєстрація"
 }
