--- a/src/locales/uk/messages.json
+++ b/src/locales/uk/messages.json
@@ -1,21 +1,37 @@
 {
+  "Account type": "Тип акаунту",
+  "Coach": "Тренер",
   "Courses": "Курси",
+  "Email": "Електронна пошта",
   "English": "Англійська",
-  "First latter": "Перша літера",
+  "First latter": "Перша повинна бути літера",
+  "Is not email": "Не валідна електронна пошта",
   "Log Out": "Вихід",
   "Login": "Логін",
   "Login Sign In": "Увійти",
   "Max 20 symbols": "Максимум 20 символів",
   "Min 4 symbols": "Мінімум 4 символи",
+  "Min 8 symbols": "Мінімум 8 символів",
+  "Name": "Ім'я",
   "Only latyns letters, numbers and _": "Тільки латинскі літери, цифри та _",
+  "Only letters": "Тільки літери",
   "Password": "Пароль",
+  "Password mismatch": "Паролі не співпадають",
   "Profile": "Профіль",
   "Rates": "Рейтинги",
   "Register": "Зареєструватися",
+  "Repeat password": "Повторіть пароль",
   "Russian": "Російська",
   "Search": "Пошук",
+  "Sex": "Стать",
   "Sign In": "Вхід",
   "Sign Up": "Реєстрація",
+  "Surname": "Фамілія",
+  "Trainee": "Учень",
   "Ukrainian": "Українська",
-  "{ex}": ""
+  "Invalid login": "Неіснуючий логін",
+  "Invalid password": "Невірный пароль",
+  "The user with this login already exist": "Користувач з таким логіном вже існує",
+  "The user with this email already exist": "Користувач з такою адресою електронной пошти вже існує",
+  "Football": "Футбол"
 }
