--- a/src/locales/ru/messages.json
+++ b/src/locales/ru/messages.json
@@ -1,21 +1,37 @@
 {
+  "Account type": "Тип аккаунта",
+  "Coach": "Тренер",
   "Courses": "Курсы",
+  "Email": "Электронная почта",
   "English": "Английский",
-  "First latter": "Первая буква",
+  "First latter": "Первая должна быть буква",
+  "Is not email": "Не валидая электронная почта",
   "Log Out": "Выход",
   "Login": "Логин",
   "Login Sign In": "Войти",
   "Max 20 symbols": "Максимум 20 символов",
   "Min 4 symbols": "Минимум 4 символа",
+  "Min 8 symbols": "Минимум 8 символов",
+  "Name": "Имя",
   "Only latyns letters, numbers and _": "Только латинские буквы, цифры и _",
+  "Only letters": "Только буквы",
   "Password": "Пароль",
+  "Password mismatch": "Пароли не совпадают",
   "Profile": "Профиль",
   "Rates": " Рейтинги",
   "Register": "Зарегистрироваться",
+  "Repeat password": "Повторите пароль",
   "Russian": "Русский",
   "Search": "Поиск",
+  "Sex": "Пол",
   "Sign In": "Вход",
   "Sign Up": "Регистрация",
+  "Surname": "Фамилия",
+  "Trainee": "Ученик",
   "Ukrainian": "Украинский",
-  "{ex}": ""
+  "Invalid login": "Неверный логин",
+  "Invalid password": "Неверный пароль",
+  "The user with this login already exist": "Пользователь с таким логином уже существует",
+  "The user with this email already exist": "Пользователь с таким адрессом электронной почты уже существует",
+  "Football": "Футбол"
 }
