course with trainings list and adding training

--- a/src/locales/ru/messages.json
+++ b/src/locales/ru/messages.json
@@ -1,10 +1,20 @@
 {
   "Account type": "Тип аккаунта",
+  "Add": "Добавить",
+  "Add course": "Добавить курс",
+  "Add to friends": "Добавть в друзья",
+  "Ban": "Заблокирован",
+  "Close": "Закрыть",
   "Coach": "Тренер",
   "Courses": "Курсы",
+  "Description": "Описание",
   "Email": "Электронная почта",
   "English": "Английский",
   "First latter": "Первая должна быть буква",
+  "Football": "Футбол",
+  "Friends": "Друзья",
+  "Invalid login": "Неверный логин",
+  "Invalid password": "Неверный пароль",
   "Is not email": "Не валидая электронная почта",
   "Log Out": "Выход",
   "Login": "Логин",
@@ -12,7 +22,9 @@
   "Max 20 symbols": "Максимум 20 символов",
   "Min 4 symbols": "Минимум 4 символа",
   "Min 8 symbols": "Минимум 8 символов",
+  "My courses": "Мои курсы",
   "Name": "Имя",
+  "OK": "ОК",
   "Only latyns letters, numbers and _": "Только латинские буквы, цифры и _",
   "Only letters": "Только буквы",
   "Password": "Пароль",
@@ -26,12 +38,13 @@
   "Sex": "Пол",
   "Sign In": "Вход",
   "Sign Up": "Регистрация",
+  "Status": "Статус",
+  "Subscribes": "Подписки",
   "Surname": "Фамилия",
+  "The user with this email already exist": "Пользователь с таким адрессом электронной почты уже существует",
+  "The user with this login already exist": "Пользователь с таким логином уже существует",
   "Trainee": "Ученик",
   "Ukrainian": "Украинский",
-  "Invalid login": "Неверный логин",
-  "Invalid password": "Неверный пароль",
-  "The user with this login already exist": "Пользователь с таким логином уже существует",
-  "The user with this email already exist": "Пользователь с таким адрессом электронной почты уже существует",
-  "Football": "Футбол"
+  "Users": "Пользователи",
+  "Сoach": "Тренер"
 }
