--- a/src/locales/uk/messages.json
+++ b/src/locales/uk/messages.json
@@ -1,10 +1,20 @@
 {
   "Account type": "Тип акаунту",
+  "Add": "Додати",
+  "Add course": "Додати курс",
+  "Add to friends": "Додати до друзів",
+  "Ban": "Заблокован",
+  "Close": "Закрити",
   "Coach": "Тренер",
   "Courses": "Курси",
+  "Description": "Опис",
   "Email": "Електронна пошта",
   "English": "Англійська",
   "First latter": "Перша повинна бути літера",
+  "Football": "Футбол",
+  "Friends": "Друзі",
+  "Invalid login": "Неіснуючий логін",
+  "Invalid password": "Невірный пароль",
   "Is not email": "Не валідна електронна пошта",
   "Log Out": "Вихід",
   "Login": "Логін",
@@ -12,7 +22,9 @@
   "Max 20 symbols": "Максимум 20 символів",
   "Min 4 symbols": "Мінімум 4 символи",
   "Min 8 symbols": "Мінімум 8 символів",
+  "My courses": "Мої курси",
   "Name": "Ім'я",
+  "OK": "ОК",
   "Only latyns letters, numbers and _": "Тільки латинскі літери, цифри та _",
   "Only letters": "Тільки літери",
   "Password": "Пароль",
@@ -26,12 +38,13 @@
   "Sex": "Стать",
   "Sign In": "Вхід",
   "Sign Up": "Реєстрація",
+  "Status": "Статус",
+  "Subscribes": "Підписки",
   "Surname": "Фамілія",
+  "The user with this email already exist": "Користувач з такою адресою електронной пошти вже існує",
+  "The user with this login already exist": "Користувач з таким логіном вже існує",
   "Trainee": "Учень",
   "Ukrainian": "Українська",
-  "Invalid login": "Неіснуючий логін",
-  "Invalid password": "Невірный пароль",
-  "The user with this login already exist": "Користувач з таким логіном вже існує",
-  "The user with this email already exist": "Користувач з такою адресою електронной пошти вже існує",
-  "Football": "Футбол"
+  "Users": "Користувачі",
+  "Сoach": "Тренер"
 }
