--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -1,10 +1,20 @@
 {
   "Account type": "Account type",
+  "Add": "Add",
+  "Add course": "Add course",
+  "Add to friends": "Add to friends",
+  "Ban": "Ban",
+  "Close": "Close",
   "Coach": "Coach",
   "Courses": "Courses",
+  "Description": "Description",
   "Email": "Email",
   "English": "English",
   "First latter": "First must be latter",
+  "Football": "Football",
+  "Friends": "Friends",
+  "Invalid login": "Invalid login",
+  "Invalid password": "Invalid password",
   "Is not email": "Is not email",
   "Log Out": "Log Out",
   "Login": "Login",
@@ -12,7 +22,9 @@
   "Max 20 symbols": "Max 20 symbols",
   "Min 4 symbols": "Min 4 symbols",
   "Min 8 symbols": "Min 8 symbols",
+  "My courses": "My courses",
   "Name": "Name",
+  "OK": "OK",
   "Only latyns letters, numbers and _": "Only latyns letters, numbers and _",
   "Only letters": "Only letters",
   "Password": "Password",
@@ -26,12 +38,13 @@
   "Sex": "Sex",
   "Sign In": "Sign In",
   "Sign Up": "Sign Up",
+  "Status": "Status",
+  "Subscribes": "Subscribes",
   "Surname": "Surname",
+  "The user with this email already exist": "The user with this email already exist",
+  "The user with this login already exist": "The user with this login already exist",
   "Trainee": "Trainee",
   "Ukrainian": "Ukrainian",
-  "Invalid login": "Invalid login",
-  "Invalid password": "Invalid password",
-  "The user with this login already exist": "The user with this login already exist",
-  "The user with this email already exist": "The user with this email already exist",
-  "Football": "Football"
+  "Users": "Users",
+  "Сoach": "Сoach"
 }
