add training info

--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -3,9 +3,11 @@
   "Add": "Add",
   "Add course": "Add course",
   "Add to friends": "Add to friends",
+  "Add training": "Add training",
   "Ban": "Ban",
   "Close": "Close",
   "Coach": "Coach",
+  "Course": "Course",
   "Courses": "Courses",
   "Description": "Description",
   "Email": "Email",
@@ -39,12 +41,18 @@
   "Sign In": "Sign In",
   "Sign Up": "Sign Up",
   "Status": "Status",
+  "Subscribe": "Subscribe",
+  "Subscribers": "Subscribers",
   "Subscribes": "Subscribes",
   "Surname": "Surname",
   "The user with this email already exist": "The user with this email already exist",
   "The user with this login already exist": "The user with this login already exist",
   "Trainee": "Trainee",
+  "Trainings": "Trainings",
   "Ukrainian": "Ukrainian",
   "Users": "Users",
-  "Сoach": "Сoach"
+  "place": "place",
+  "points": "points",
+  "Сoach": "Сoach",
+  "You are banned": "You are banned"
 }
