--- a/src/locales/ru/messages.json
+++ b/src/locales/ru/messages.json
@@ -3,9 +3,11 @@
   "Add": "Добавить",
   "Add course": "Добавить курс",
   "Add to friends": "Добавть в друзья",
+  "Add training": "Добавить тренировку",
   "Ban": "Заблокирован",
   "Close": "Закрыть",
   "Coach": "Тренер",
+  "Course": "Курс",
   "Courses": "Курсы",
   "Description": "Описание",
   "Email": "Электронная почта",
@@ -39,12 +41,18 @@
   "Sign In": "Вход",
   "Sign Up": "Регистрация",
   "Status": "Статус",
+  "Subscribe": "Подписаться",
+  "Subscribers": "Подписчики",
   "Subscribes": "Подписки",
   "Surname": "Фамилия",
   "The user with this email already exist": "Пользователь с таким адрессом электронной почты уже существует",
   "The user with this login already exist": "Пользователь с таким логином уже существует",
   "Trainee": "Ученик",
+  "Trainings": "Тренировки",
   "Ukrainian": "Украинский",
   "Users": "Пользователи",
-  "Сoach": "Тренер"
+  "place": "место",
+  "points": "очки",
+  "Сoach": "Тренер",
+  "You are banned": "Вы заблокированы"
 }
