--- a/src/locales/uk/messages.json
+++ b/src/locales/uk/messages.json
@@ -3,9 +3,11 @@
   "Add": "Додати",
   "Add course": "Додати курс",
   "Add to friends": "Додати до друзів",
+  "Add training": "Додати тренуванння",
   "Ban": "Заблокован",
   "Close": "Закрити",
   "Coach": "Тренер",
+  "Course": "Курс",
   "Courses": "Курси",
   "Description": "Опис",
   "Email": "Електронна пошта",
@@ -39,12 +41,18 @@
   "Sign In": "Вхід",
   "Sign Up": "Реєстрація",
   "Status": "Статус",
+  "Subscribe": "Підписатися",
+  "Subscribers": "Підписники",
   "Subscribes": "Підписки",
   "Surname": "Фамілія",
   "The user with this email already exist": "Користувач з такою адресою електронной пошти вже існує",
   "The user with this login already exist": "Користувач з таким логіном вже існує",
   "Trainee": "Учень",
+  "Trainings": "Тренування",
   "Ukrainian": "Українська",
   "Users": "Користувачі",
-  "Сoach": "Тренер"
+  "place": "місце",
+  "points": "бали",
+  "Сoach": "Тренер",
+  "You are banned": "Ви заблоковані"
 }
